--- a/index.html
+++ b/index.html
@@ -6,11 +6,6 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Hang Man!!!</title>
   <script type="text/javascript">
-      function startDrawing() {
-        drawDiagonal();
-        drawDiagonal2();
-      }
-
       function drawDiagonal () {
         var c = document.getElementById("myCanvas");
         var ctx = c.getContext("2d");
@@ -25,6 +20,18 @@
         ctx.lineTo(0,600);
         ctx.stroke();
       }
+
+      var drawFunctions = [drawDiagonal, drawDiagonal2];
+      function startDrawing() {
+        for (var index=0; index < drawFunctions.length; index++) {
+          var currentFunction = drawFunctions[index];
+          currentFunction.call();
+        }
+    //    drawDiagonal();
+    //    drawDiagonal2();
+      }
+
+
   </script>
 </head>
 <body>
