--- a/index.html
+++ b/index.html
@@ -1,3 +1,55 @@
+<!--
+Copyright (c) 2011-2017 GitHub Inc.
+
+Permission is hereby granted, free of charge, to any person obtaining
+a copy of this software and associated documentation files (the
+"Software"), to deal in the Software without restriction, including
+without limitation the rights to use, copy, modify, merge, publish,
+distribute, sublicense, and/or sell copies of the Software, and to
+permit persons to whom the Software is furnished to do so, subject to
+the following conditions:
+
+The above copyright notice and this permission notice shall be
+included in all copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
+EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
+MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
+LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
+OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
+WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+
+
+This application bundles the following third-party packages in accordance
+with the following licenses:
+
+
+Package: *
+License: BSD
+License Source: LICENSE
+Source Text:
+
+Copyright (c) Rajat Luthra (rajatluthra@gmail.com)
+All rights reserved.
+
+Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
+
+Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.
+
+Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.
+
+THIS IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS,
+EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+
+-->
+<!--
+  Author: Rajat Luthra
+  Date:   May 6th, 2017.
+
+  Purpose: Hang Man game's canvas helper functions.
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,33 +57,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Hang Man!!!</title>
+  <script src="js/hangmanFrame.js" charset="utf-8"></script>
+  <script src="js/hangmanGame.js" charset="utf-8"></script>
+  <script src="js/hangmanWordGenerator.js" charset="utf-8"></script>
   <script type="text/javascript">
-      function drawDiagonal () {
-        var c = document.getElementById("myCanvas");
-        var ctx = c.getContext("2d");
-        ctx.moveTo(0,0);
-        ctx.lineTo(400,600);
-        ctx.stroke();
-      }
-      function drawDiagonal2 () {
-        var c = document.getElementById("myCanvas");
-        var ctx = c.getContext("2d");
-        ctx.moveTo(400,0);
-        ctx.lineTo(0,600);
-        ctx.stroke();
-      }
+     var drawFunctions = [drawFrame, drawBase, mainBar, topBar,
+                          footRest, roap, hangManFace, hangManBody,
+                          hangManLHand, hangManRHand, hangManLFoot,
+                          hangManRFoot];
 
-      var drawFunctions = [drawDiagonal, drawDiagonal2];
       function startDrawing() {
         for (var index=0; index < drawFunctions.length; index++) {
           var currentFunction = drawFunctions[index];
           currentFunction.call();
         }
-    //    drawDiagonal();
-    //    drawDiagonal2();
       }
-
-
   </script>
 </head>
 <body>
